@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>478</height>
+    <height>404</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -65,6 +65,13 @@
        <widget class="QCheckBox" name="showOnlyCurrentDesktop">
         <property name="text">
          <string>Only show tasks from the current desktop</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="showOnlyCurrentActivity">
+        <property name="text">
+         <string>Only show tasks from current activity</string>
         </property>
        </widget>
       </item>
@@ -128,39 +135,6 @@
          <string>Group similar jobs</string>
         </property>
        </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="recentDocumentsGroupBox">
-     <property name="title">
-      <string>Recent documents</string>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4">
-      <item>
-       <widget class="QCheckBox" name="showRecentDocumentsCheckBox">
-        <property name="text">
-         <string>Show recent documents</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="recentDocumentsAmountLabel">
-          <property name="text">
-           <string>Recent documents history amount:</string>
-          </property>
-          <property name="buddy">
-           <cstring>recentDocumentsAmountSpinBox</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSpinBox" name="recentDocumentsAmountSpinBox"/>
-        </item>
-       </layout>
       </item>
      </layout>
     </widget>
